# calfkit-mesh

./: .gitignore  CHANGELOG.md  Makefile  NOTICE  README.md  hatch_build.py  pyproject.toml  release-please-config.json
.github/workflows/: build-wheels.yml  release.yml
deploy/docker/: docker-compose.yml
deploy/docker/bridge/: Dockerfile  app.py
deploy/k8s/: kind-config.yaml
deploy/k8s/strimzi/: kafka-kraft.yaml
docs/: local-development.md
src/calfkit_mesh/: __init__.py
tests/: test_locator.py
